Fixed the app/navbar pusher. Needed to move the overflow-x:hidden from the .app to the body.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,11 +2,10 @@
     transform: translateX(0%);    
     transition: transform .2s ease-in;
     height: 100%;
-    overflow-x: hidden;
 }
 
 .app.active {
-    transform: translateX(-200px);    
+    transform: translateX(-200px);
 }
 
 .main {
